feat(messaging): implement messaging_system pattern integration
Implement comprehensive messaging pattern integration from messaging_system library:

- Pub/Sub pattern (hl7_message_bus): Topic-based message distribution with
  wildcard subscriptions for HL7 ADT, ORM, ORU, SIU messages
- Request/Reply pattern (hl7_request_handler): Client-server pattern for
  ACK/NAK handling with configurable timeouts
- Pipeline pattern (hl7_pipeline): Staged message processing with
  validators, transformers, filters, and retry support
- Backend selection (messaging_backend): Factory for standalone/integration
  mode selection with automatic detection

Implementation details:
- Pimpl pattern for ABI stability
- std::expected for error handling (C++23 style)
- Thread-safe with std::shared_mutex where applicable
- Statistics collection for monitoring
- Error code allocation: -800 to -839 for messaging module

Fixes: #146
See also: #153, #154, #155, #156

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -298,6 +298,21 @@ list(APPEND PACS_BRIDGE_HEADERS
     include/pacs/bridge/pacs_adapter/mpps_handler.h
 )
 
+# Messaging Patterns (messaging_system Integration)
+# See: https://github.com/kcenon/pacs_bridge/issues/146
+list(APPEND PACS_BRIDGE_SOURCES
+    src/messaging/hl7_message_bus.cpp
+    src/messaging/hl7_request_handler.cpp
+    src/messaging/hl7_pipeline.cpp
+    src/messaging/messaging_backend.cpp
+)
+list(APPEND PACS_BRIDGE_HEADERS
+    include/pacs/bridge/messaging/hl7_message_bus.h
+    include/pacs/bridge/messaging/hl7_request_handler.h
+    include/pacs/bridge/messaging/hl7_pipeline.h
+    include/pacs/bridge/messaging/messaging_backend.h
+)
+
 # FHIR Gateway (Phase 3)
 if(BRIDGE_BUILD_FHIR)
     list(APPEND PACS_BRIDGE_SOURCES
