--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -386,6 +386,53 @@ add_integration_test(stress_test "integration;stress;phase2" 600)
 add_integration_test(monitoring_integration_test "integration;monitoring;metrics;phase4" 180)
 
 # =============================================================================
+# Messaging Pattern Tests (Issue #146)
+# =============================================================================
+
+# Messaging Pattern Integration Tests (Issue #146)
+# Tests Pub/Sub, Request/Reply, Pipeline, and Backend selection
+add_executable(messaging_pattern_test messaging/messaging_pattern_test.cpp)
+target_link_libraries(messaging_pattern_test
+    PRIVATE
+        pacs_bridge
+        pacs_bridge_compile_options
+)
+if(PACS_BRIDGE_HAS_GTEST)
+    if(TARGET GTest::gtest_main)
+        target_link_libraries(messaging_pattern_test PRIVATE GTest::gtest_main GTest::gmock)
+    elseif(TARGET gtest_main)
+        target_link_libraries(messaging_pattern_test PRIVATE gtest_main gmock)
+    endif()
+endif()
+target_include_directories(messaging_pattern_test
+    PRIVATE
+        ${PACS_BRIDGE_TEST_UTILS_DIR}
+)
+target_compile_definitions(messaging_pattern_test
+    PRIVATE
+        PACS_BRIDGE_TEST_DATA_DIR="${PACS_BRIDGE_TEST_DATA_DIR}"
+)
+if(PACS_BRIDGE_HAS_GTEST)
+    include(GoogleTest)
+    gtest_discover_tests(messaging_pattern_test
+        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+        PROPERTIES
+            TIMEOUT 120
+            LABELS "unit;messaging;phase4"
+    )
+else()
+    add_test(
+        NAME messaging_pattern_test
+        COMMAND messaging_pattern_test
+        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+    )
+    set_tests_properties(messaging_pattern_test PROPERTIES
+        TIMEOUT 120
+        LABELS "unit;messaging;phase4"
+    )
+endif()
+
+# =============================================================================
 # Phase 3: FHIR Gateway Tests (Issue #31)
 # =============================================================================
 
