feat(messaging): add HL7 event types for Event Bus integration
Implement event-driven message processing architecture using
common_system's Event Bus pattern:

- Add hl7_events.h with comprehensive event types:
  - Receive events: hl7_message_received_event, hl7_ack_sent_event
  - Processing events: parsed, validated, routed
  - Transformation events: hl7_to_dicom_mapped, dicom_worklist_updated
  - Error event: hl7_processing_error_event

- Add hl7_events.cpp with event publisher/subscriber utilities:
  - RAII-style event_subscription class
  - Convenience functions for publishing events
  - on_all_events for comprehensive monitoring

- Add comprehensive unit tests (25+ test cases)

Closes #142

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -300,17 +300,20 @@ list(APPEND PACS_BRIDGE_HEADERS
 
 # Messaging Patterns (messaging_system Integration)
 # See: https://github.com/kcenon/pacs_bridge/issues/146
+# See: https://github.com/kcenon/pacs_bridge/issues/142
 list(APPEND PACS_BRIDGE_SOURCES
     src/messaging/hl7_message_bus.cpp
     src/messaging/hl7_request_handler.cpp
     src/messaging/hl7_pipeline.cpp
     src/messaging/messaging_backend.cpp
+    src/messaging/hl7_events.cpp
 )
 list(APPEND PACS_BRIDGE_HEADERS
     include/pacs/bridge/messaging/hl7_message_bus.h
     include/pacs/bridge/messaging/hl7_request_handler.h
     include/pacs/bridge/messaging/hl7_pipeline.h
     include/pacs/bridge/messaging/messaging_backend.h
+    include/pacs/bridge/messaging/hl7_events.h
 )
 
 # FHIR Gateway (Phase 3)
