--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -300,21 +300,30 @@ list(APPEND PACS_BRIDGE_HEADERS
 
 # Messaging Patterns (messaging_system Integration)
 # See: https://github.com/kcenon/pacs_bridge/issues/146
-# See: https://github.com/kcenon/pacs_bridge/issues/142
 list(APPEND PACS_BRIDGE_SOURCES
     src/messaging/hl7_message_bus.cpp
     src/messaging/hl7_request_handler.cpp
     src/messaging/hl7_pipeline.cpp
     src/messaging/messaging_backend.cpp
-    src/messaging/hl7_events.cpp
 )
 list(APPEND PACS_BRIDGE_HEADERS
     include/pacs/bridge/messaging/hl7_message_bus.h
     include/pacs/bridge/messaging/hl7_request_handler.h
     include/pacs/bridge/messaging/hl7_pipeline.h
     include/pacs/bridge/messaging/messaging_backend.h
-    include/pacs/bridge/messaging/hl7_events.h
 )
+
+# Event Bus Integration (requires common_system)
+# See: https://github.com/kcenon/pacs_bridge/issues/142
+# Only available when building with kcenon ecosystem dependencies
+if(NOT BRIDGE_STANDALONE_BUILD)
+    list(APPEND PACS_BRIDGE_SOURCES
+        src/messaging/hl7_events.cpp
+    )
+    list(APPEND PACS_BRIDGE_HEADERS
+        include/pacs/bridge/messaging/hl7_events.h
+    )
+endif()
 
 # FHIR Gateway (Phase 3)
 if(BRIDGE_BUILD_FHIR)
