ci: use pre-cloned dependencies with FETCHCONTENT_SOURCE_DIR
Set FETCHCONTENT_SOURCE_DIR_<PACKAGE> variables to point to pre-cloned
dependency directories in CI. This prevents FetchContent from
re-downloading dependencies that are already cloned as sibling
directories.

Without this fix, FetchContent would try to clone dependencies again
even though they are already available in $GITHUB_WORKSPACE.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -177,6 +177,15 @@ jobs:
       run: |
         # For clang on Linux, use libc++ for better C++23 support
         # This ensures ABI compatibility with GoogleTest built from source
+        # Use pre-cloned dependencies instead of FetchContent re-downloading
+        FETCH_OPTS="-DFETCHCONTENT_SOURCE_DIR_COMMON_SYSTEM=$GITHUB_WORKSPACE/common_system"
+        FETCH_OPTS="$FETCH_OPTS -DFETCHCONTENT_SOURCE_DIR_THREAD_SYSTEM=$GITHUB_WORKSPACE/thread_system"
+        FETCH_OPTS="$FETCH_OPTS -DFETCHCONTENT_SOURCE_DIR_LOGGER_SYSTEM=$GITHUB_WORKSPACE/logger_system"
+        FETCH_OPTS="$FETCH_OPTS -DFETCHCONTENT_SOURCE_DIR_CONTAINER_SYSTEM=$GITHUB_WORKSPACE/container_system"
+        FETCH_OPTS="$FETCH_OPTS -DFETCHCONTENT_SOURCE_DIR_NETWORK_SYSTEM=$GITHUB_WORKSPACE/network_system"
+        FETCH_OPTS="$FETCH_OPTS -DFETCHCONTENT_SOURCE_DIR_MONITORING_SYSTEM=$GITHUB_WORKSPACE/monitoring_system"
+        FETCH_OPTS="$FETCH_OPTS -DFETCHCONTENT_SOURCE_DIR_PACS_SYSTEM=$GITHUB_WORKSPACE/pacs_system"
+
         if [ "${{ matrix.compiler }}" = "clang" ] && [ "${{ runner.os }}" = "Linux" ]; then
           cmake -B build \
             -G Ninja \
@@ -187,6 +196,7 @@ jobs:
             -DBRIDGE_BUILD_EXAMPLES=OFF \
             -DBRIDGE_BUILD_HL7=ON \
             -DBRIDGE_BUILD_FHIR=OFF \
+            $FETCH_OPTS \
             -DCMAKE_C_COMPILER=clang \
             -DCMAKE_CXX_COMPILER=clang++ \
             "-DCMAKE_CXX_FLAGS=-stdlib=libc++" \
@@ -201,6 +211,7 @@ jobs:
             -DBRIDGE_BUILD_EXAMPLES=OFF \
             -DBRIDGE_BUILD_HL7=ON \
             -DBRIDGE_BUILD_FHIR=OFF \
+            $FETCH_OPTS \
             -DCMAKE_C_COMPILER=${{ matrix.compiler == 'gcc' && 'gcc' || 'clang' }} \
             -DCMAKE_CXX_COMPILER=${{ matrix.compiler == 'gcc' && 'g++' || 'clang++' }}
         fi
@@ -214,6 +225,7 @@ jobs:
         # Refresh PATH to include Ninja from chocolatey
         $env:Path = [System.Environment]::GetEnvironmentVariable("Path","Machine") + ";" + [System.Environment]::GetEnvironmentVariable("Path","User")
 
+        # Use pre-cloned dependencies instead of FetchContent re-downloading
         cmake -B build `
           -G Ninja `
           -DCMAKE_BUILD_TYPE=Release `
@@ -223,6 +235,13 @@ jobs:
           -DBRIDGE_BUILD_EXAMPLES=OFF `
           -DBRIDGE_BUILD_HL7=ON `
           -DBRIDGE_BUILD_FHIR=OFF `
+          -DFETCHCONTENT_SOURCE_DIR_COMMON_SYSTEM="$env:GITHUB_WORKSPACE/common_system" `
+          -DFETCHCONTENT_SOURCE_DIR_THREAD_SYSTEM="$env:GITHUB_WORKSPACE/thread_system" `
+          -DFETCHCONTENT_SOURCE_DIR_LOGGER_SYSTEM="$env:GITHUB_WORKSPACE/logger_system" `
+          -DFETCHCONTENT_SOURCE_DIR_CONTAINER_SYSTEM="$env:GITHUB_WORKSPACE/container_system" `
+          -DFETCHCONTENT_SOURCE_DIR_NETWORK_SYSTEM="$env:GITHUB_WORKSPACE/network_system" `
+          -DFETCHCONTENT_SOURCE_DIR_MONITORING_SYSTEM="$env:GITHUB_WORKSPACE/monitoring_system" `
+          -DFETCHCONTENT_SOURCE_DIR_PACS_SYSTEM="$env:GITHUB_WORKSPACE/pacs_system" `
           -DCMAKE_TOOLCHAIN_FILE="$env:VCPKG_ROOT/scripts/buildsystems/vcpkg.cmake" `
           -DVCPKG_MANIFEST_MODE=OFF
 
@@ -302,6 +321,7 @@ jobs:
     - name: Configure CMake with coverage
       working-directory: pacs_bridge
       run: |
+        # Use pre-cloned dependencies instead of FetchContent re-downloading
         cmake -B build \
           -G Ninja \
           -DCMAKE_BUILD_TYPE=Debug \
@@ -310,7 +330,14 @@ jobs:
           -DBRIDGE_BUILD_TESTS=ON \
           -DBRIDGE_BUILD_EXAMPLES=OFF \
           -DBRIDGE_BUILD_HL7=ON \
-          -DBRIDGE_BUILD_FHIR=OFF
+          -DBRIDGE_BUILD_FHIR=OFF \
+          -DFETCHCONTENT_SOURCE_DIR_COMMON_SYSTEM=$GITHUB_WORKSPACE/common_system \
+          -DFETCHCONTENT_SOURCE_DIR_THREAD_SYSTEM=$GITHUB_WORKSPACE/thread_system \
+          -DFETCHCONTENT_SOURCE_DIR_LOGGER_SYSTEM=$GITHUB_WORKSPACE/logger_system \
+          -DFETCHCONTENT_SOURCE_DIR_CONTAINER_SYSTEM=$GITHUB_WORKSPACE/container_system \
+          -DFETCHCONTENT_SOURCE_DIR_NETWORK_SYSTEM=$GITHUB_WORKSPACE/network_system \
+          -DFETCHCONTENT_SOURCE_DIR_MONITORING_SYSTEM=$GITHUB_WORKSPACE/monitoring_system \
+          -DFETCHCONTENT_SOURCE_DIR_PACS_SYSTEM=$GITHUB_WORKSPACE/pacs_system
 
     - name: Build
       working-directory: pacs_bridge
