feat(messaging): add Event Bus integration for HL7 message processing (#158)
* feat(messaging): add HL7 event types for Event Bus integration

Implement event-driven message processing architecture using
common_system's Event Bus pattern:

- Add hl7_events.h with comprehensive event types:
  - Receive events: hl7_message_received_event, hl7_ack_sent_event
  - Processing events: parsed, validated, routed
  - Transformation events: hl7_to_dicom_mapped, dicom_worklist_updated
  - Error event: hl7_processing_error_event

- Add hl7_events.cpp with event publisher/subscriber utilities:
  - RAII-style event_subscription class
  - Convenience functions for publishing events
  - on_all_events for comprehensive monitoring

- Add comprehensive unit tests (25+ test cases)

Closes #142

* docs: add Event Bus integration documentation

Update modules.md with HL7 Events documentation:
- Add event types table with descriptions
- Add event subscription examples
- Add event publishing examples
- Add correlation ID tracking explanation
- Update key classes table with event-related classes

Related to #142

* fix(messaging): add missing <functional> header to hl7_events.h

The std::function type is used in event_subscriber functions but the
<functional> header was not included, causing compilation errors on all
platforms.

* build: conditionally include Event Bus code for non-standalone builds

Event Bus integration requires common_system dependency which is not
available in standalone builds. The hl7_events.cpp/h and hl7_events_test
are now only included when BRIDGE_STANDALONE_BUILD=OFF.

This allows the project to build successfully in both:
- Standalone mode (BRIDGE_STANDALONE_BUILD=ON): without Event Bus
- Full mode (BRIDGE_STANDALONE_BUILD=OFF): with Event Bus integration

* ci: enable full build with kcenon ecosystem dependencies

Set BRIDGE_STANDALONE_BUILD=OFF in all CI configurations to enable
Event Bus integration and other features that require common_system.
This is necessa

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -177,6 +177,10 @@ jobs:
       run: |
         # For clang on Linux, use libc++ for better C++23 support
         # This ensures ABI compatibility with GoogleTest built from source
+        # Note: BRIDGE_STANDALONE_BUILD=ON (default) excludes Event Bus code
+        # which requires common_system's Event Bus. Full ecosystem build with
+        # Event Bus integration will be tested separately when kcenon ecosystem
+        # dependency management is resolved. See Issue #142 for details.
         if [ "${{ matrix.compiler }}" = "clang" ] && [ "${{ runner.os }}" = "Linux" ]; then
           cmake -B build \
             -G Ninja \
@@ -212,6 +216,7 @@ jobs:
         # Refresh PATH to include Ninja from chocolatey
         $env:Path = [System.Environment]::GetEnvironmentVariable("Path","Machine") + ";" + [System.Environment]::GetEnvironmentVariable("Path","User")
 
+        # Note: BRIDGE_STANDALONE_BUILD=ON (default) - see Issue #142
         cmake -B build `
           -G Ninja `
           -DCMAKE_BUILD_TYPE=Release `
@@ -296,6 +301,7 @@ jobs:
 
     # Tests enabled (Issue #6 - Test Framework Setup completed)
     # Coverage reports include unit test coverage
+    # Note: BRIDGE_STANDALONE_BUILD=ON (default) - see Issue #142
     - name: Configure CMake with coverage
       working-directory: pacs_bridge
       run: |
