test(hl7): add extended HL7 message parsing and encoding tests
Add comprehensive test coverage for HL7 message handling:

- Extended message type parsing tests (SIU, MDM, QRY, BAR, RDE)
- Encoding conversion tests (UTF-8, Korean characters, high-byte)
- Invalid format handling tests (truncated, malformed, edge cases)
- Field repetition parsing tests
- ACK/NACK response generation tests (AA, AE, AR, CA, CE, CR)
- Edge case tests (empty fields, mixed line endings, deep nesting)

41 new tests added to improve test coverage.

Closes #159

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -199,6 +199,9 @@ if(BRIDGE_BUILD_HL7)
     # HL7 Protocol Tests (uses GTest framework)
     add_gtest_test(hl7_test "unit;hl7;phase1")
 
+    # HL7 Extended Tests (Issue #159) - additional parsing, encoding, ACK tests
+    add_gtest_test(hl7_extended_test "unit;hl7;encoding;phase1")
+
     # ORU Generator Tests (Issue #25) - GTest framework
     add_gtest_test(oru_generator_test "unit;hl7;oru;phase2")
 
