test(mapping): add extended mapper tests for Patient, Study, Order
Add comprehensive test coverage for HL7-DICOM mapping functionality:

PatientMapper Tests (9 tests):
- Mandatory field validation (patient_id, patient_name)
- Optional field handling (birth_date, sex, weight, comments)
- Korean name handling (UTF-8, ideographic representation)
- Multiple patient identifier support

StudyMapper Tests (5 tests):
- Basic study mapping from ORM messages
- Referring physician mapping
- Procedure description extraction
- Priority code conversion (STAT, HIGH, MEDIUM, LOW)
- Study Instance UID generation

OrderMapper Tests (5 tests):
- Accession number mapping
- Placer/filler order number extraction
- Requesting physician mapping
- Scheduled procedure step creation
- Modality mapping

Edge Case Tests (9 tests):
- Empty message handling
- Special characters (apostrophe, hyphen, escape sequences)
- Long value handling
- Unicode/multilingual support (Korean, German, Japanese)
- Date/time format validation
- Sex code conversion
- Invalid message type rejection
- Partial mapping support

DICOM to HL7 Reverse Mapping Tests (3 tests):
- Name format conversion
- Date/time format conversion

Total: 31 tests with 100% pass rate

Closes #160

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -220,6 +220,9 @@ if(BRIDGE_BUILD_HL7)
     # DICOM-HL7 Mapping Tests (MPPS to ORM - Issue #24) - custom framework
     add_bridge_test(dicom_hl7_mapper_test "unit;mapping;phase2")
 
+    # Extended Mapper Tests (Issue #160) - Patient, Study, Order mapping
+    add_bridge_test(mapper_extended_test "unit;mapping;patient;study;order")
+
     # Message Router Tests - custom framework
     add_bridge_test(router_test "unit;router;phase1")
 
