test(integration): add disaster recovery and resilience tests (#162)
Add comprehensive integration tests for system resilience under failure conditions:

Network Failure Scenario Tests:
- test_network_connection_refused: behavior when server is unavailable
- test_network_response_timeout: handling of slow server responses
- test_network_intermittent_failures: recovery from random failures
- test_network_recovery_during_retry: delivery after network recovery

Message Loss Scenario Tests:
- test_message_persistence_across_restart: queue recovery after crash
- test_message_duplicate_detection: at-least-once delivery verification
- test_processing_message_recovery: recovery of in-progress messages

Retry Logic Tests:
- test_exponential_backoff_timing: backoff interval verification
- test_retry_success_after_failures: successful delivery after retries
- test_max_retry_dead_letter: dead letter queue on max retries
- test_dead_letter_retry: manual retry of dead-lettered messages

Resilience Tests:
- test_resilience_concurrent_failures: stability under concurrent failures

Closes #162

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -385,6 +385,13 @@ endif()
 # Failover Routing Tests (RIS failover)
 add_integration_test(failover_test "integration;failover;phase2")
 
+# Disaster Recovery Tests (Issue #162) - network failures, message loss, retry logic
+if(PACS_BRIDGE_HAS_SQLITE)
+    add_integration_test(disaster_recovery_test "integration;disaster-recovery;resilience;phase2" 600)
+else()
+    message(STATUS "Skipping disaster_recovery_test: SQLite not available (required for queue_manager)")
+endif()
+
 # Stress Tests (high volume)
 add_integration_test(stress_test "integration;stress;phase2" 600)
 
@@ -594,6 +601,9 @@ if(PACS_BRIDGE_HAS_SQLITE)
     message(STATUS "  - queue_persistence_test")
 endif()
 message(STATUS "  - failover_test")
+if(PACS_BRIDGE_HAS_SQLITE)
+    message(STATUS "  - disaster_recovery_test (Issue #162)")
+endif()
 message(STATUS "  - stress_test")
 message(STATUS "  - mllp_connection_test (Issue #161)")
 message(STATUS "  - pacs_worklist_test (Issue #161)")
