fix(tests): correct HL7 API usage in validation and encoding tests
Update test files to use the correct HL7 parser and builder APIs:

- Change parse() return type from std::optional to std::expected
- Replace get_segment() with segment()
- Replace get_field() with field_value() (returns std::string_view)
- Add explicit std::string() constructor for string_view conversions
- Add GTest libraries to integration test CMake macro

Files modified:
- hl7_validation_edge_cases_test.cpp
- hl7_malformed_segment_recovery_test.cpp
- hl7_encoding_iso_conversion_test.cpp
- CMakeLists.txt

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -404,11 +404,14 @@ macro(add_integration_test TEST_NAME)
         PRIVATE
             pacs_bridge
             pacs_bridge_compile_options
+            GTest::gtest
+            GTest::gmock_main
     )
 
     target_include_directories(${TEST_NAME}
         PRIVATE
             ${CMAKE_CURRENT_SOURCE_DIR}/integration
+            ${CMAKE_CURRENT_SOURCE_DIR}/utils
     )
 
     target_compile_definitions(${TEST_NAME}
