feat(workflow): add mpps_hl7_workflow coordinator
Implement workflow orchestration component that wires together:
- mpps_handler callback for receiving MPPS events
- dicom_hl7_mapper for MPPS to HL7 ORM^O01 conversion
- outbound_router for direct MLLP delivery
- queue_manager for reliable fallback delivery

Features:
- Destination selection based on configurable routing rules
- Support for modality-based, station-based, and pattern-based routing
- Correlation ID and trace ID generation for tracking
- Automatic queue fallback on delivery failure
- Async processing with configurable worker threads
- Statistics collection for monitoring
- Fluent API for configuration building

Closes #173

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -298,6 +298,15 @@ list(APPEND PACS_BRIDGE_HEADERS
     include/pacs/bridge/pacs_adapter/mpps_handler.h
 )
 
+# Workflow Orchestration (MPPS → HL7 → Outbound)
+# See: https://github.com/kcenon/pacs_bridge/issues/173
+list(APPEND PACS_BRIDGE_SOURCES
+    src/workflow/mpps_hl7_workflow.cpp
+)
+list(APPEND PACS_BRIDGE_HEADERS
+    include/pacs/bridge/workflow/mpps_hl7_workflow.h
+)
+
 # Messaging Patterns (messaging_system Integration)
 # See: https://github.com/kcenon/pacs_bridge/issues/146
 list(APPEND PACS_BRIDGE_SOURCES
